artiq/test/lit/embedding/error_syscall_return.py
# RUN: %python -m artiq.compiler.testbench.embedding +diag %s 2>%t
# RUN: OutputCheck %s --file-to-check=%t

from artiq.language.core import *
from artiq.language.types import *

# CHECK-L: ${LINE:+2}: error: system call must have a return type annotation
@syscall
def foo():
    pass

@kernel
def entrypoint():
    foo()
